--- a/index.html
+++ b/index.html
@@ -1011,15 +1011,15 @@
 
             // Create mapping of language codes to preview image URLs
             const previewImages = {
-                'EN': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/P0xbnxetXkJzb0FN/image.jpg',
-                'ZH': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/s5Dmo4bQhp9STxcf/image.jpg',
-                'IS': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/81BI3shXESpP9TtO/image.jpg',
-                'ES': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/Qa4lzBuRrinrI3gm/image.jpg',
-                'HI': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/m9ZmdyJdqHS2sgFY/image.jpg',
-                'DE': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/TYTdSGnJcDqfG2pC/image.jpg',
-                'FR': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/4ULHVGXBMnFUidW0/image.jpg',
-                'KO': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/ajabQGCumTuIqkWR/image.jpg',
-                'RU': 'https://assets.grok.com/users/f88def3b-c446-4c7d-9fc1-f4441cd1603f/generated/sfz3J2ZpSZd5EMRg/image.jpg',
+                'EN': 'images/en.jpg',
+                'ZH': 'images/zh.jpg',
+                'IS': 'images/is.jpg',
+                'ES': 'images/es.jpg',
+                'HI': 'images/hi.jpg',
+                'DE': 'images/de.jpg',
+                'FR': 'images/fr.jpg',
+                'KO': 'images/ko.jpg',
+                'RU': 'images/ru.jpg',
                 // Add more language codes and their corresponding image URLs as needed
             };
 
