--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2 INPUT 1 OUTPUT TEMPLATE</title>
+    <title>https://en.wikipedia.org/wiki/List_of_Wikipedias#Wikipedia_editions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -968,7 +968,7 @@
             }
 
             else {
-                frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias#All_Wikipedias_ordered_by_number_of_articles";
+                frameElement.src = "https://en.wikipedia.org/wiki/List_of_Wikipedias#Wikipedia_editions";
                 frameElement.style.display = "block";
             }
         }
