--- a/index.html
+++ b/index.html
@@ -968,8 +968,8 @@
             }
 
             else {
-                frameElement.src = "https://en.wikipedia.org/wiki/List_of_Wikipedias#Wikipedia_editions";
-                frameElement.style.display = "block";
+                document.getElementById("charInput1").value = "!";
+                document.getElementById("charInput2").value = "!";
             }
         }
 
@@ -1020,6 +1020,10 @@
                 'FR': 'images/fr.jpg',
                 'KO': 'images/ko.jpg',
                 'RU': 'images/ru.jpg',
+                'JA': 'images/ja.jpg',
+                'IT': 'images/it.jpg',
+                'PT': 'images/pt.jpg',
+                'AR': 'images/ar,jpg',
                 // Add more language codes and their corresponding image URLs as needed
             };
 
